repo/jaeger-operator/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-operator
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      name: jaeger-operator
  template:
    metadata:
      labels:
        name: jaeger-operator
    spec:
      serviceAccountName: jaeger-operator
      nodeSelector:
        kubernetes.io/hostname: node1
      containers:
      - name: jaeger-operator
        image: jaegertracing/jaeger-operator:1.15.1
        ports:
        - containerPort: 8383
          name: metrics
        args: ["start"]
        imagePullPolicy: Always
      - name: jaeger-agent
        image: jaegertracing/jaeger-agent:1.15.1
        args:
        - --reporter.grpc.host-port=dns:///jaeger-collector-headless.$(POD_NAMESPACE).svc.cluster.local:14250
        ports:
        - containerPort: 6831
          name: jg-compact-trft
          protocol: UDP
