repo/jaeger-operator/jaeger_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jaeger
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - jaeger.shitangdama.cn
    secretName: jaeger
  rules:
    - host: jaeger.shitangdama.cn
      http:
        paths:
        - path: /
          backend:
            serviceName: my-jaeger-query
            servicePort: 16686
